--- a/src/identification/Extractor.ipynb
+++ b/src/identification/Extractor.ipynb
@@ -90,7 +90,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "frame = get_frame('../../data/')\n",
     "frame['event'] = float(-1)"
    ]
@@ -143,7 +142,7 @@
     "    line.append(data['id'].iloc[0])\n",
     "    index.append(event_num)\n",
     "    lines.append(line)\n",
-    "features = DataFrame(lines,index = index,columns=columns)\n"
+    "features = DataFrame(lines,index = index,columns=columns)"
    ]
   },
   {
@@ -330,7 +329,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -342,7 +343,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
